# energy-forecasting-anomaly-platform

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: default.yaml
docs/: architecture.md  reproducibility.md  results.md
src/energy_forecasting_anomaly/: __init__.py
src/energy_forecasting_anomaly/anomaly/: __init__.py  detectors.py
src/energy_forecasting_anomaly/api/: __init__.py  app.py  make_payload.py
src/energy_forecasting_anomaly/data/: __init__.py  csv_parser.py  generate_demo_data.py  normalize_real_csv.py
src/energy_forecasting_anomaly/evaluation/: __init__.py  backtest.py  evaluate_anomalies.py  metrics.py  tune_anomalies.py
src/energy_forecasting_anomaly/features/: __init__.py  engineering.py
src/energy_forecasting_anomaly/models/: __init__.py  baseline.py
src/energy_forecasting_anomaly/monitoring/: __init__.py  drift.py
src/energy_forecasting_anomaly/training/: pipeline.py
tests/: test_anomaly.py  test_api.py  test_backtest.py  test_csv_parser.py  test_evaluate_anomalies.py  test_evaluation.py  test_features.py  test_generate_demo_data.py  test_make_payload.py  test_models.py  test_normalize_real_csv.py  test_training_split.py  test_tune_anomalies.py
